--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -24,25 +24,19 @@ jobs:
       run: |
           sudo apt update
           sudo apt install -y libsdl2-dev libboost-dev libfreetype6-dev zlib1g-dev libpugixml-dev
-    - name: Extract branch name
-      shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-      id: extract_branch
-    - uses: actions/checkout@v2
-      with:
-        repository: GamedevFramework/gf
-        submodules: recursive
-        ref: ${{ steps.extract_branch.outputs.branch }}
-    - name: CMake hack for Ubuntu
-      shell: bash
-      working-directory: ${{ github.workspace }}
-      run: |
-        cat library/CMakeLists.txt | sed 's/SDL2::SDL2/\$\{SDL2_LIBRARIES\}/' | tee library/CMakeLists.txt > /dev/null
-        echo 'include_directories(SYSTEM ${SDL2_INCLUDE_DIRS})' >> library/CMakeLists.txt
-    - name: Configure gf
-      run: cmake -DGF_BUILD_GAMES=OFF -DGF_BUILD_EXAMPLES=OFF -DGF_BUILD_DOCUMENTATION=OFF -DGF_SINGLE_COMPILTATION_UNIT=OFF -DGF_DEBUG=OFF -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -S ${{ github.workspace }} -B ${{ github.workspace }}/build
-    - name: Build gf
-      run: cmake --build ${{ github.workspace }}/build --config ${{ env.BUILD_TYPE }} --parallel
+    - name: Install gf
+      run : |
+        git clone https://github.com/GamedevFramework/gf.git
+        cd gf
+        git submodules update --init
+        mkdir build
+        cd build
+        cmake ..
+        make
+        sudo make install
     - name: build application
-      run: mkdir build && cd build && cmake .. && make
-
+      run: |
+        mkdir build
+        cd build
+        cmake ..
+        make
