--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,11 +19,12 @@ endif ()
 
 add_executable(client
 	client/client.cpp
-)
+	"client/clientTools.cpp"
+	"client/ClientNetwork.cpp" "client/model/CBoard.cpp" "model/Plateau.cpp" "client/model/CPiece.cpp")
 
 add_executable(server
 	server/server.cpp
-)
+	"server/serverTools.cpp" "model/Plateau.cpp")
 
 target_link_libraries(client
 	PRIVATE
