Piece,Pawn,Color,PieceEnum

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ endif ()
 
 add_executable(client
 	client/client.cpp
+	model/Piece.cpp
+	model/Pawn.cpp
   "client/Game.cpp" "client/Network.cpp" "model/Plateau.cpp"     "client/Vue.cpp")
 
 add_executable(server
