--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,8 @@ add_executable(client
 	client/Entity/PlayTitleEntity.cpp
 	client/Entity/TitleEntity.cpp
 	client/Entity/RulesEntity.cpp
+
+	client/Widget/TextFieldWidget.cpp
 	)
 
 add_executable(server
