Implem exécution des cartes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ add_executable(client_tsl
 	model/Case.cpp
 	model/Card.cpp
 	model/Deck.cpp
+	model/CardFunction.cpp
 
 	client/GameHub.cpp
 	client/GameData.cpp
@@ -53,6 +54,7 @@ add_executable(server_tsl
 	model/Card.cpp
 	model/Deck.cpp
 	model/Piece.cpp
+	model/CardFunction.cpp
 	server/AnnexFctServer.cpp
 )
 
