--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ add_executable(client_tsl
 	client/Entity/RulesEntity.cpp
 	client/Entity/MainEntity.cpp
 	client/Entity/PoseEntity.cpp
+	client/Entity/CardsEntity.cpp
 	)
 
 add_executable(server_tsl
