card bombe atomique piece dans poubelle et roi immunise

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,11 +27,12 @@ add_executable(client_tsl
 	model/Card.cpp
 	model/Deck.cpp
 	model/CardFunction.cpp
-	model/GamePhase.cpp
+	model/CardFunctionChooseCases.cpp
 
 	client/GameHub.cpp
 	client/GameData.cpp
-
+	client/GamePhase.cpp
+	
 	client/Scene/StartScene.cpp		
 	client/Scene/MenuScene.cpp
 	client/Scene/PlaySelectScene.cpp
@@ -58,7 +59,7 @@ add_executable(server_tsl
 	model/Deck.cpp
 	model/Piece.cpp
 	model/CardFunction.cpp
-	model/GamePhase.cpp
+	model/CardFunctionChooseCases.cpp
 	server/AnnexFctServer.cpp
 )
 
