ajout son principale et cible

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,21 +3,42 @@ cmake_minimum_required(VERSION 3.10)
 set(GAME tsl)
 
 project(${GAME}
-  VERSION 0.1.0
+  VERSION 0.1
 )
 
 include(GNUInstallDirs)
 
-find_package(gf REQUIRED COMPONENTS graphics)
+find_package(gf REQUIRED COMPONENTS graphics net)
+#find_package(SFML REQUIRED COMPONENTS audio)
 
-if (UNIX)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -O3")
+if (LINUX)
+	message(STATUS ">>> Linux")
+elseif (UNIX)
+	message(STATUS ">>> Unix")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -O3")
+	find_package(PkgConfig REQUIRED)
+	pkg_check_modules(SFML2 REQUIRED sfml-audio>=2.1)
+elseif (WIN32)
+	message(STATUS ">>> Win")
+	find_package(SFML 2.1 REQUIRED COMPONENTS audio)
+	set(SFML2_LIBRARIES "sfml-audio")
 endif ()
 
 # set(GAME_DATADIR "${CMAKE_INSTALL_PREFIX}/share/games/${GAME}" CACHE PATH "Game Data Dir")
 # configure_file(${CMAKE_CURRENT_SOURCE_DIR}/code/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h @ONLY)
 
+if(NOT MSVC)
+	message(STATUS ">>> MSCV")
+  	add_definitions(-Wall -Wextra -g -pedantic)
+else ()
+	message(STATUS ">>> NOT MSCV")
+  	add_definitions(/DNOMINMAX /W4 /utf-8 /permissive-)
+endif()
+
 add_executable(client_tsl
+	client/AudioManager.cpp
+	client/Singletons.cpp
+
 	client/client.cpp
 	client/Network.cpp
 	
@@ -72,6 +93,7 @@ target_link_libraries(client_tsl
 	PRIVATE
 		gf::graphics
 		gf::net
+		${SFML2_LIBRARIES}
 )
 
 target_link_libraries(server_tsl
