--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,7 @@ include(GNUInstallDirs)
 find_package(gf REQUIRED COMPONENTS graphics net)
 #find_package(SFML REQUIRED COMPONENTS audio)
 
-if (LINUX)
-	message(STATUS ">>> Linux")
-elseif (UNIX)
+if (UNIX)
 	message(STATUS ">>> Unix")
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -O3")
 	find_package(PkgConfig REQUIRED)
