--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -23,7 +23,7 @@ jobs:
     - name: install dependencies
       run: |
           sudo apt update
-          sudo apt install -y libsdl2-dev libboost-dev libfreetype6-dev zlib1g-dev libpugixml-dev
+          sudo apt install -y libsdl2-dev libboost-dev libfreetype6-dev zlib1g-dev libpugixml-dev sfml-audio
     - name: Install gf
       run : |
         git clone https://github.com/GamedevFramework/gf.git
